fix: the alignment of the contents of the radio button and change border color

--- a/plugins/reports/frontend/public/stylesheets/vue-main.scss
+++ b/plugins/reports/frontend/public/stylesheets/vue-main.scss
@@ -42,8 +42,11 @@
                     width: 100%;
                     .text-small {
                         float: right;
-                        color: #03060C;
+                        color: #81868D;
                     }
+                }
+                .el-radio__input{
+                    margin-top: auto;
                 }
             }
         }
